<resources>
    <string name="app_name">MNews</string>

    <!-- 底部导航栏 -->
    <string name="news">新闻</string>
    <string name="sort">分类</string>
    <string name="theme">主题</string>
    <string name="my">我的</string>

    <!-- login register-->
    <string name="user_hint">请输入用户名/邮箱</string>
    <string name="email_hint">请输入您的邮箱</string>
    <string name="user_register_hint">请输入用户名</string>
    <string name="email_register_hint">请输入邮箱</string>
    <string name="password_hint">请输入密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="code_hint">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="registering">注册</string>
    <string name="reset">重置密码</string>
    <string name="third_login">第三方登录</string>

    <string name="register">还未注册</string>
    <string name="forget_psw">忘记密码？</string>

</resources>
